<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.heychat.RegisterActivity">
    <include layout="@layout/app_bar_layout" android:id="@+id/main_page_toolbar"
      />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RegistrationText"
        android:text="@string/register_yourself"
        android:layout_below="@+id/main_page_toolbar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/UsernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RegistrationText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Username"
        android:hint="@string/enter_your_username1"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/FirstNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/UsernameWrapper"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FirstName"
        android:hint="@string/enter_your_first_name"
        />
</android.support.design.widget.TextInputLayout>
<android.support.design.widget.TextInputLayout
    android:id="@+id/LastNameWrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/FirstNameWrapper"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LastName"
        android:hint="@string/enter_your_last_name"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
    android:id="@+id/EmailWrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_below="@id/LastNameWrapper"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Email"
        android:hint="@string/enter_a_valid_email"
        android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>
<android.support.design.widget.TextInputLayout
    android:id="@+id/PasswordWrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/EmailWrapper"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password"
        android:hint="@string/enter_numeric_password"
        android:maxLength="6"
        android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Register"
        android:layout_below="@+id/PasswordWrapper"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="@string/register"
        android:backgroundTint="@color/colorTeal"
        android:textColor="@color/colorWhite"/>




</RelativeLayout>
