<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.heychat.AccountSetting">

    <include layout="@layout/app_bar_layout" android:id="@+id/Account_Setting_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RegistrationUpdateText"
        android:text="UPDATE INFORMATION"
        android:layout_below="@+id/Account_Setting_toolbar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/UsernameUpdateWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RegistrationUpdateText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/UsernameUpdate"
            android:hint="@string/enter_your_username1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/FirstNameUpdateWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/UsernameUpdateWrapper"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/FirstNameUpdate"
            android:hint="@string/enter_your_first_name"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/LastNameUpdateWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FirstNameUpdateWrapper"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LastNameUpdate"
            android:hint="@string/enter_your_last_name"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/EmailUpdateWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LastNameUpdateWrapper"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EmailUpdate"
            android:hint="@string/enter_a_valid_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/PasswordUpdateWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EmailUpdateWrapper"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PasswordUpdate"
            android:hint="@string/enter_numeric_password"
            android:maxLength="6"
            android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordUpdateWrapper"
        android:orientation="horizontal"
        android:id="@+id/ImageContainer"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Choose Photo"
            android:visibility="invisible"
            android:textSize="15sp"
            android:layout_weight="5"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_marginLeft="5dp"
            android:layout_height="100dp"
            android:src="@drawable/default_dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/UserImage"/>


    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChoosePhoto"
        android:layout_below="@+id/ImageContainer"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/upload"
        android:backgroundTint="@color/colorTeal"
        android:textColor="@color/colorWhite"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Update"
        android:layout_below="@+id/ImageContainer"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/update"
        android:backgroundTint="@color/colorTeal"
        android:textColor="@color/colorWhite"/>



</RelativeLayout>
</ScrollView>
