<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.heychat.StartActivity">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/NameApp"
        android:layout_centerInParent="true"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NameApp"
        android:textStyle="bold"
        android:text="@string/welcome_to_hey_chat"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:textSize="25sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LoginBtn"
        android:text="@string/already_a_member_login"
        android:layout_below="@+id/NameApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorWhite"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterBtn"
        android:text="@string/not_a_member_register"
        android:layout_below="@+id/LoginBtn"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:backgroundTint="@color/colorTeal"
        android:textColor="@color/colorWhite"
        android:layout_alignRight="@+id/LoginBtn"
        android:layout_alignEnd="@+id/LoginBtn"
        android:layout_alignLeft="@+id/LoginBtn"
        android:layout_alignStart="@+id/LoginBtn" />

</RelativeLayout>
