<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.heychat.AddUserToGroup">
   <include layout="@layout/app_bar_layout" android:id="@+id/add_user_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_user_toolbar"
        android:id="@+id/MemberAddContainer"
        android:weightSum="10"
        android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/adduser1"
        android:layout_weight="7"
        android:layout_below="@+id/add_user_toolbar"
        android:layout_marginTop="20dp"
        android:text="@string/add_member"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorTeal"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="bottom"
            android:id="@+id/addIUserToGroup"
            android:src="@drawable/plus_i"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_member_list"
        android:layout_below="@+id/MemberAddContainer"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AddUserToGroup"
        android:backgroundTint="@color/colorTeal"
        android:text="@string/add_user"
        android:visibility="invisible"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CancelUserAdd"
        android:backgroundTint="@color/colorTeal"
        android:text="@string/back"

        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        />


</RelativeLayout>
